Sets up Prisma ORM for database interactions
Initializes Prisma ORM to manage database interactions, including schema definition and data access.

- Adds Prisma schema for defining data models.
- Configures database connection and environment variables.
- Adds Prisma client and CLI tooling for migrations and data management.
- Updates .gitignore to exclude database files and env files.
- Changes entry point to server.js.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ npm-debug.log*
 pnpm-debug.log*
 backend/.env.local
 backend/.env.prod
+backend/.env
+backend/prisma/dev.db
+backend/prisma/dev.db-journal
