--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,18 @@
   "name": "club-member-mangement-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "dev": "tsc -w --preserveWatchOutput & nodemon --watch dist dist/index.js",
+    "dev": "tsc -w --preserveWatchOutput & nodemon --watch dist dist/server.js",
     "build": "tsc -p tsconfig.json",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "start": "node --enable-source-maps dist/index.js",
+    "start": "node --enable-source-maps dist/server.js",
     "clean": "rm -rf dist",
+    "prisma": "prisma",
+    "db:generate": "prisma generate --schema prisma/schema.prisma",
+    "db:migrate": "prisma migrate dev --schema prisma/schema.prisma",
+    "db:push": "prisma db push --schema prisma/schema.prisma",
+    "db:studio": "prisma studio --schema prisma/schema.prisma",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,9 +24,11 @@
     "@types/express": "^5.0.6",
     "@types/node": "22.18.13",
     "nodemon": "^3.1.11",
+    "prisma": "7.1.0",
     "typescript": "5.8.3"
   },
   "dependencies": {
+    "@prisma/client": "^7.1.0",
     "dotenv": "17.2.3",
     "express": "5.2.1"
   }
