--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,10 @@
     "start": "node --enable-source-maps dist/server.js",
     "clean": "rm -rf dist",
     "prisma": "prisma",
-    "db:generate": "prisma generate --schema prisma/schema.prisma",
-    "db:migrate": "prisma migrate dev --schema prisma/schema.prisma",
-    "db:push": "prisma db push --schema prisma/schema.prisma",
-    "db:studio": "prisma studio --schema prisma/schema.prisma",
+    "db:generate": "prisma generate --config=./prisma.config.ts",
+    "db:migrate": "prisma migrate dev --config=./prisma.config.ts",
+    "db:push": "prisma db push --config=./prisma.config.ts",
+    "db:studio": "prisma studio --config=./prisma.config.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -29,7 +29,10 @@
   },
   "dependencies": {
     "@prisma/client": "^7.1.0",
+    "@prisma/adapter-pg": "^7.1.0",
     "dotenv": "17.2.3",
-    "express": "5.2.1"
+    "express": "5.2.1",
+    "pg": "^8.16.3",
+    "uuid": "8.3.2"
   }
 }
