--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "packageManager": "pnpm@10.25.0",
   "scripts": {
+    "db:up": "docker compose up -d",
+    "db:down": "docker compose down",
+    "db:logs": "docker compose logs -f postgres",
     "dev": "pnpm -C backend dev",
     "build": "pnpm -C backend build",
     "typecheck": "pnpm -C backend typecheck",
