--- a/backend/.env.stage
+++ b/backend/.env.stage
@@ -1,3 +1,6 @@
 PORT=3000
 APP_ENV=stage
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:5432/DB?schema=public"
+CORS_ORIGINS="https://your-frontend.example"
+JWT_SECRET="CHANGE_ME_LONG_RANDOM_SECRET"
+JWT_EXPIRES_IN_SECONDS=86400
